==> Zwq-GoBug/GZRSDZComp_Pro/项目代码/DHCP/User/Ethernet/W5500/w5500_conf.c <==
/***************************************************************************************************
	* @file    		w5500_conf.c
	* @author  		WIZnet Software Team 
	* @version 		V1.0
	* @date    		2015-02-14
	* @brief  		配置MCU，移植W5500程序需要修改的文件，配置W5500的MAC和IP地址
****************************************************************************************************/
#include <stdio.h> 
#include <string.h>
#include "w5500_conf.h"
#include "bsp_i2c_ee.h"
#include "bsp_spi_flash.h"
#include "utility.h"
#include "w5500.h"
#include "dhcp.h"
#include "bsp_TiMbase.h"


CONFIG_MSG  	ConfigMsg;		//配置结构体
EEPROM_MSG_STR 	EEPROM_MSG;		//EEPROM存储信息结构体

//定义MAC地址,如果多块W5500网络适配板在同一现场工作，请使用不同的MAC地址
uint8 mac[6]={0x00,0x08,0xdc,0x11,0x11,0x11};

//定义默认IP信息
uint8 local_ip[4] 	= {192,168,1,88};		//定义W5500默认IP地址	--	192.168.1.88
uint8 subnet[4]   	= {255,255,255,0};		//定义W5500默认子网掩码	--	255.255.255.0
uint8 gateway[4]  	= {192,168,1,1};		//定义W5500默认网关		--	192.168.1.1
uint8 dns_server[4] = {114,114,114,114};	//定义W5500默认DNS		--	114.114.114.114
uint16 local_port   = 5000;					//定义本地端口			--	5000

//定义远端IP信息
uint8  remote_ip[4] = {192,168,1,99};		//远端IP地址
uint16 remote_port  = 5000;					//远端端口号

//IP配置方法选择，请自行选择
uint8	ip_from   = IP_FROM_DHCP;				

uint8 	dhcp_ok   = 0;	//DHCP成功获取IP
uint32	ms = 0;			//毫秒计数
uint32	dhcp_time = 0;	//DHCP运行计数
vu8		ntptimer  = 0;	//NPT秒计数


/*******************************************
	*@brief		配置W5500的IP地址
	*@param		无
	*@return	无
********************************************/
void set_w5500_ip(void)
{	
	//复制定义的配置信息到配置结构体*/
	memcpy(ConfigMsg.mac, mac, 6);
	memcpy(ConfigMsg.lip,local_ip,4);
	memcpy(ConfigMsg.sub,subnet,4);
	memcpy(ConfigMsg.gw,gateway,4);
	memcpy(ConfigMsg.dns,dns_server,4);
	if(ip_from==IP_FROM_DEFINE)	
		printf(" 使用定义的IP信息配置W5500\r\n");

	/*使用EEPROM存储的IP参数*/	
	if(ip_from==IP_FROM_EEPROM)
	{
		/*从EEPROM中读取IP配置信息*/
		read_config_from_eeprom();		

		/*如果读取EEPROM中MAC信息,如果已配置，则可使用*/		
		if( *(EEPROM_MSG.mac)==0x00&& *(EEPROM_MSG.mac+1)==0x08&&*(EEPROM_MSG.mac+2)==0xdc)		
		{
			printf(" IP from EEPROM\r\n");
			/*复制EEPROM配置信息到配置的结构体变量*/
			memcpy(ConfigMsg.lip,EEPROM_MSG.lip, 4);				
			memcpy(ConfigMsg.sub,EEPROM_MSG.sub, 4);
			memcpy(ConfigMsg.gw, EEPROM_MSG.gw, 4);
		}
		else
		{
			printf(" EEPROM未配置,使用定义的IP信息配置W5500,并写入EEPROM\r\n");
			write_config_to_eeprom();	/*使用默认的IP信息，并初始化EEPROM中数据*/
		}			
	}

	/*使用DHCP获取IP参数，需调用DHCP子函数*/		
	if(ip_from==IP_FROM_DHCP)								
	{
		/*复制DHCP获取的配置信息到配置结构体*/
		if(dhcp_ok==1)
		{
			printf(" IP from DHCP\r\n");		 
			memcpy(ConfigMsg.lip,DHCP_GET.lip, 4);
			memcpy(ConfigMsg.sub,DHCP_GET.sub, 4);
			memcpy(ConfigMsg.gw,DHCP_GET.gw, 4);
			memcpy(ConfigMsg.dns,DHCP_GET.dns,4);
		}
		else
		{
			printf(" DHCP子程序未运行,或者不成功\r\n");
			printf(" 使用定义的IP信息配置W5500\r\n");
		}
	}

	/*以下配置信息，根据需要选用*/	
	ConfigMsg.sw_ver[0]=FW_VER_HIGH;
	ConfigMsg.sw_ver[1]=FW_VER_LOW;	

	/*将IP配置信息写入W5500相应寄存器*/	
	setSUBR(ConfigMsg.sub);
	setGAR(ConfigMsg.gw);
	setSIPR(ConfigMsg.lip);

	getSIPR (local_ip);			
	printf(" W5500 IP地址   : %d.%d.%d.%d\r\n", local_ip[0],local_ip[1],local_ip[2],local_ip[3]);
	getSUBR(subnet);
	printf(" W5500 子网掩码 : %d.%d.%d.%d\r\n", subnet[0],subnet[1],subnet[2],subnet[3]);
	getGAR(gateway);
	printf(" W5500 网关     : %d.%d.%d.%d\r\n", gateway[0],gateway[1],gateway[2],gateway[3]);
}


/******************************************
	* 功能描述：	配置W5500的MAC地址
	* 入口参数：	无
	* 返回值：		无
*******************************************/
void set_w5500_mac(void)
{
	memcpy(ConfigMsg.mac, mac, 6);
	setSHAR(ConfigMsg.mac);			//设置MAC地址
	memcpy(DHCP_GET.mac, mac, 6);
}


/********************************************
	* 功能描述：	配置W5500的GPIO接口
	* 入口参数：	无
	* 返回值：		无
*********************************************/
void gpio_for_w5500_config(void)
{
	GPIO_InitTypeDef	GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOE |
							RCC_APB2Periph_GPIOG , ENABLE);
	
//使用STM32F103ZET6
#ifdef STM32F103ZET6
	//定义RESET引脚
	GPIO_InitStructure.GPIO_Pin 	= GPIO_Pin_15;			//选择要控制的GPIO引脚		 
	GPIO_InitStructure.GPIO_Speed 	= GPIO_Speed_50MHz;		//设置引脚速率为50MHz		
	GPIO_InitStructure.GPIO_Mode 	= GPIO_Mode_Out_PP;		//设置引脚模式为通用推挽输出
	GPIO_Init(GPIOG, &GPIO_InitStructure);					//调用库函数，初始化GPIO
	GPIO_SetBits(GPIOG, GPIO_Pin_15);		

	//定义INT引脚
	GPIO_InitStructure.GPIO_Pin 	= GPIO_Pin_8;			//选择要控制的GPIO引脚		 
	GPIO_InitStructure.GPIO_Speed 	= GPIO_Speed_50MHz;		//设置引脚速率为50MHz		
	GPIO_InitStructure.GPIO_Mode 	= GPIO_Mode_IPU;		//设置引脚模式为通用推挽模拟上拉输入
	GPIO_Init(GPIOG, &GPIO_InitStructure);					//调用库函数，初始化GPIO
#endif

	//初始化SPI1接口
	SPI_FLASH_Init();	
}


/**
	*@brief		W5500片选信号设置函数
	*@param		val: 为“0”表示片选端口为低，为“1”表示片选端口为高
	*@return	无
*/
void wiz_cs(uint8_t val)
{
	if (val == LOW) 
	{
		//拉低复位引脚
		GPIO_ResetBits(GPIOA, WIZ_SCS); 
	}
	else if (val == HIGH)
	{
		//拉高复位引脚
		GPIO_SetBits(GPIOA, WIZ_SCS); 
	}
}


/**
*@brief		设置W5500的片选端口SCSn为低
*@param		无
*@return	无
*/
void iinchip_csoff(void)
{
	wiz_cs(LOW);
}


/**
*@brief		设置W5500的片选端口SCSn为高
*@param		无
*@return	无
*/
void iinchip_cson(void)
{	
   wiz_cs(HIGH);
}


/**
*@brief		W5500复位设置函数
*@param		无
*@return	无
*/
void reset_w5500(void)
{
//使用STM32F103ZET6MCU
#ifdef STM32F103ZET6
	GPIO_ResetBits(GPIOG, WIZ_RESET);
	delay_us(2);  
	GPIO_SetBits(GPIOG, WIZ_RESET);
	delay_ms(1600);
#endif
}


/************************************************************
						SPI帧格式
		16bit		8bit			N Byte
	---------------------------------------------
	| 	地址段 	| 	控制段 	| 		数据段		|
	---------------------------------------------
*************************************************************/

/*************************************************
	* 功能说明：	SPIx读写8位数据
	* 入口参数：	dat：写入的8位数据
	* 返回值：		SPI读回的数据
**************************************************/
uint8  IINCHIP_SpiSendData(uint8 dat)
{
   return( SPI_FLASH_SendByte(dat) );
}


/************************************************
	* 功能描述：	写入一个8位数据到W5500
	* 入口参数：	addrbsb: 写入数据的地址
					data：写入的8位数据
	* 返回值：		无
*************************************************/
void IINCHIP_WRITE( uint32 addrbsb,  uint8 data)
{
   iinchip_csoff();           							//SPI帧开始
		
   IINCHIP_SpiSendData( (addrbsb & 0x00FF0000)>>16);	//16bit的偏移地址	
   IINCHIP_SpiSendData( (addrbsb & 0x0000FF00)>> 8);
	
   IINCHIP_SpiSendData( (addrbsb & 0x000000F8) + 4);  	//8bit的控制段：偏移区域归属 + 读/写访问模式 + SPI 工作模式
	
   IINCHIP_SpiSendData(data);							//N字节的数据段      
	
   iinchip_cson();                            			//SPI帧结束
}


/******************************************************
	* 功能描述：	从W5500读出一个8位数据
	* 入口参数：	addrbsb	--	写入数据的地址
					data	--	从写入的地址处读取到的8位数据
	* 返回值：		读取到的数据
*******************************************************/
uint8 IINCHIP_READ(uint32 addrbsb)
{
	uint8	data = 0;

	iinchip_csoff();									//SPI帧开始

	IINCHIP_SpiSendData( (addrbsb & 0x00FF0000)>>16);	//16bit的偏移地址
	IINCHIP_SpiSendData( (addrbsb & 0x0000FF00)>> 8);	

	IINCHIP_SpiSendData( (addrbsb & 0x000000F8));		//8bit的控制段 ...0 00

	data = IINCHIP_SpiSendData(0x00); 					//读取1Byte的数据

	iinchip_cson();										//SPI帧结束

	return data;    
}


/********************************************************
	* 功能描述：	向W5500写入len字节数据
	* 入口参数：	addrbsb	--	写入数据的地址
					buf		--	写入字符串
					len		--	字符串长度
	* 返回值：		len		--	返回字符串长度
*********************************************************/
uint16 wiz_write_buf(uint32 addrbsb,uint8* buf,uint16 len)
{
	uint16	idx = 0;
	
	if( len==0 ) 
		printf("Unexpected2 length 0\r\n");
	
	iinchip_csoff(); 
	
	IINCHIP_SpiSendData( (addrbsb & 0x00FF0000)>>16 );	//高8位地址
	IINCHIP_SpiSendData( (addrbsb & 0x0000FF00)>> 8 );	//低8位地址
	
	IINCHIP_SpiSendData( (addrbsb & 0x000000F8) + 4 );	//1111 1100
	
	for(idx = 0; idx < len; idx++)
	{
		IINCHIP_SpiSendData(buf[idx]);
	}
	
	iinchip_cson(); 
	
	return len;  
}


/***************************************************
	* 功能说明：	从W5500读出len个字节的数据
	* 入口参数：	addrbsb	--	读取数据的地址
					buf		--	存放读取数据
					len		--	字符串长度
	* 返回值：		len		--	返回字符串长度
****************************************************/
uint16 wiz_read_buf(uint32 addrbsb, uint8* buf,uint16 len)
{
	uint16	idx = 0;
	
	if(len == 0)
		printf("Unexpected2 length 0\r\n");
	
	iinchip_csoff();		 					 		//SPI帧开始
	
	IINCHIP_SpiSendData( (addrbsb & 0x00FF0000)>>16 );	//16bit地址段的偏移地址 xx xx xx xx
	IINCHIP_SpiSendData( (addrbsb & 0x0000FF00)>> 8 );
	
	//8bit控制段 xx xx
	IINCHIP_SpiSendData( (addrbsb & 0x000000F8) );		//区域选择(5bit)+读/写访问模式位(1bit)+SPI工作模式位(2bit)
	
	for(idx = 0; idx < len; idx++)						//N字节的数据段                   
	{
		buf[idx] = IINCHIP_SpiSendData(0x00);			//SPI发送1Byte
	}
	
	iinchip_cson();										//SPI帧结束
	
	return len;
}


/*********************************************
	* 功能描述：	写配置信息到EEPROM
	* 入口参数：	无
	* 返回值：		无
**********************************************/
void write_config_to_eeprom(void)
{
	uint16	dAddr = 0;
	ee_WriteBytes(ConfigMsg.mac,dAddr,(uint8)EEPROM_MSG_LEN);				
	delay_ms(10);																							
}


/**
*@brief		从EEPROM读配置信息
*@param		无
*@return	无
*/
void read_config_from_eeprom(void)
{
	ee_ReadBytes(EEPROM_MSG.mac,0,EEPROM_MSG_LEN);
	delay_us(10);
}

/**
*@brief		STM32定时器2初始化
*@param		无
*@return	无
*/
void Timer2_init(void)
{
	TIM2_Configuration();									//TIM2 定时配置
	TIM2_NVIC_Configuration();								//定时器的中断优先级
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);	//TIM2 重新开时钟，开始计时
}


/*********************************************
	* 功能描述：	dhcp用到的定时器初始化
	* 入口参数：	无
	* 返回值：		无
**********************************************/
void dhcp_timer_init(void)
{
	Timer2_init();																	
}


/**
*@brief		ntp用到的定时器初始化
*@param		无
*@return	无
*/
void ntp_timer_init(void)
{
	Timer2_init();																	
}

/**
*@brief		定时器2中断函数
*@param		无
*@return	无
*/
void timer2_isr(void)
{
	ms++;	
  if(ms>=1000)
  {  
    ms=0;
    dhcp_time++;					/*DHCP定时加1S*/
		#ifndef	__NTP_H__
		ntptimer++;					/*NTP重试时间加1S*/
		#endif
  }

}


/**
*@brief		STM32系统软复位函数
*@param		无
*@return	无
*/
void reboot(void)
{
	pFunction	Jump_To_Application;
	uint32		JumpAddress;
	printf(" 系统重启中……\r\n");
	JumpAddress = *(vu32*) (0x00000004);
	Jump_To_Application = (pFunction) JumpAddress;
	Jump_To_Application();
}
